Anchor position update to fix header overlap issue.

--- a/docs/template/public/kss.less
+++ b/docs/template/public/kss.less
@@ -10,7 +10,6 @@ body.kss-body {
     font-family: 'Open Sans', sans-serif;
     padding: 0;
     max-width: 100%;
-
     padding-top: 100px;
 }
 
@@ -1318,7 +1317,7 @@ header.hyHomeHeaderMinor {
 .hyGuidelinesPage {
   margin-bottom:50px;
     section {
-        padding-top: 40px;
+        // padding-top: 40px;
     }
     .imageCenter {
         position: relative;
@@ -1500,4 +1499,11 @@ body.hyComponentsPage{
 }
 .error-message-table .wide-col {
     min-width: 260px;
+}
+
+.page{
+    h2, h3{
+        margin-top: -55px;
+        padding-top: 100px;
+    }
 }
